Closed
Bug 1725519
Opened 4 years ago
Closed 4 years ago
Perma [Tier2] /builds/worker/checkouts/gecko/accessible/atk/DocAccessibleWrap.cpp:26:36: error: no member named 'GetFocusedWindow' in 'nsWindow'
Categories
(Core :: Disability Access APIs, defect, P5)
Core
Disability Access APIs
Tracking
()
RESOLVED
FIXED
93 Branch
| Tracking | Status | |
|---|---|---|
| firefox-esr78 | --- | unaffected |
| firefox-esr91 | --- | unaffected |
| firefox91 | --- | unaffected |
| firefox92 | --- | unaffected |
| firefox93 | --- | fixed |
People
(Reporter: intermittent-bug-filer, Assigned: eeejay)
References
(Regression)
Details
(Keywords: intermittent-failure, regression, Whiteboard: [retriggered])
Attachments
(1 file)
Filed by: nbeleuzu [at] mozilla.com
Parsed log: https://treeherder.mozilla.org/logviewer?job_id=348310778&repo=autoland
Full log: https://firefox-ci-tc.services.mozilla.com/api/queue/v1/task/Sc2ARMaJRDWWUGcqtui90Q/runs/0/artifacts/public/logs/live_backing.log
[task 2021-08-13T00:21:29.833Z] 00:21:29 INFO - make[4]: Entering directory '/builds/worker/workspace/obj-build/accessible/atk'
[task 2021-08-13T00:21:29.837Z] 00:21:29 INFO - /builds/worker/fetches/sccache/sccache /builds/worker/fetches/clang/bin/clang++ --sysroot /builds/worker/fetches/sysroot-x86_64-linux-gnu -std=gnu++17 -o DocAccessibleWrap.o -c -I/builds/worker/workspace/obj-build/dist/stl_wrappers -I/builds/worker/workspace/obj-build/dist/system_wrappers -include /builds/worker/checkouts/gecko/config/gcc_hidden.h -U_FORTIFY_SOURCE -D_FORTIFY_SOURCE=2 -fstack-protector-strong -fstack-clash-protection -DNDEBUG=1 -DTRIMMED=1 -DOS_POSIX=1 -DOS_LINUX=1 -DMOZ_HAS_MOZGLUE -DMOZILLA_INTERNAL_API -DIMPL_LIBXUL -DSTATIC_EXPORTABLE_JS_API -I/builds/worker/checkouts/gecko/accessible/atk -I/builds/worker/workspace/obj-build/accessible/atk -I/builds/worker/checkouts/gecko/accessible/base -I/builds/worker/checkouts/gecko/accessible/generic -I/builds/worker/checkouts/gecko/accessible/html -I/builds/worker/checkouts/gecko/accessible/ipc -I/builds/worker/checkouts/gecko/accessible/ipc/other -I/builds/worker/checkouts/gecko/accessible/xpcom -I/builds/worker/checkouts/gecko/accessible/xul -I/builds/worker/checkouts/gecko/layout/generic -I/builds/worker/checkouts/gecko/other-licenses/atk-1.0 -I/builds/worker/checkouts/gecko/widget -I/builds/worker/checkouts/gecko/widget/gtk -I/builds/worker/workspace/obj-build/ipc/ipdl/_ipdlheaders -I/builds/worker/checkouts/gecko/ipc/chromium/src -I/builds/worker/workspace/obj-build/dist/include -I/builds/worker/workspace/obj-build/dist/include/nspr -I/builds/worker/workspace/obj-build/dist/include/nss -DMOZILLA_CLIENT -include /builds/worker/workspace/obj-build/mozilla-config.h -Qunused-arguments -Qunused-arguments -Wall -Wbitfield-enum-conversion -Wdeprecated-this-capture -Wempty-body -Wformat-type-confusion -Wignored-qualifiers -Wpointer-arith -Wshadow-field-in-constructor-modified -Wshadow-uncaptured-local -Wsign-compare -Wtype-limits -Wno-error=tautological-type-limit-compare -Wunreachable-code -Wunreachable-code-return -Wno-invalid-offsetof -Wclass-varargs -Wempty-init-stmt -Wfloat-overflow-conversion -Wfloat-zero-conversion -Wloop-analysis -Wno-range-loop-analysis -Wc++2a-compat -Wcomma -Wenum-compare-conditional -Wimplicit-fallthrough -Werror=non-literal-null-conversion -Wstring-conversion -Wno-inline-new-delete -Wno-error=deprecated-declarations -Wno-error=array-bounds -Wno-error=backend-plugin -Wno-error=free-nonheap-object -Wno-error=return-std-move -Wno-error=atomic-alignment -Wno-error=deprecated-copy -Wformat -Wformat-security -Wno-gnu-zero-variadic-macro-arguments -Wno-psabi -Wno-unknown-warning-option -D_GLIBCXX_USE_CXX11_ABI=0 -fno-sized-deallocation -fno-aligned-new -fcrash-diagnostics-dir=/builds/worker/artifacts -fno-exceptions -fno-strict-aliasing -fPIC -fno-rtti -ffunction-sections -fdata-sections -fno-exceptions -fno-math-errno -pthread -pipe -g -Xclang -load -Xclang /builds/worker/workspace/obj-build/build/clang-plugin/libclang-plugin.so -Xclang -add-plugin -Xclang moz-check -O2 -fno-omit-frame-pointer -funwind-tables -Werror -I/builds/worker/checkouts/gecko/widget/gtk/compat-gtk3 -pthread -I/builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/include/gtk-3.0/unix-print -I/builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/include/gtk-3.0 -I/builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/include/at-spi2-atk/2.0 -I/builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/include/at-spi-2.0 -I/builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/include/dbus-1.0 -I/builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/lib/x86_64-linux-gnu/dbus-1.0/include -I/builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/include/gtk-3.0 -I/builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/include/cairo -I/builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/include/pango-1.0 -I/builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/include/harfbuzz -I/builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/include/pango-1.0 -I/builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/include/atk-1.0 -I/builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/include/cairo -I/builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/include/pixman-1 -I/builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/include/freetype2 -I/builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/include/libpng12 -I/builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/include/gdk-pixbuf-2.0 -I/builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/include/libpng12 -I/builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/include/gio-unix-2.0/ -I/builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/include/glib-2.0 -I/builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/lib/x86_64-linux-gnu/glib-2.0/include -I/builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/include/dbus-1.0 -I/builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/lib/x86_64-linux-gnu/dbus-1.0/include -Wno-error=unused-function -Wno-error=shadow -Wno-unused-local-typedefs -fexperimental-new-pass-manager -MD -MP -MF .deps/DocAccessibleWrap.o.pp /builds/worker/checkouts/gecko/accessible/atk/DocAccessibleWrap.cpp
[task 2021-08-13T00:21:29.838Z] 00:21:29 ERROR - /builds/worker/checkouts/gecko/accessible/atk/DocAccessibleWrap.cpp:26:36: error: no member named 'GetFocusedWindow' in 'nsWindow'
[task 2021-08-13T00:21:29.838Z] 00:21:29 INFO - if (nsWindow* window = nsWindow::GetFocusedWindow()) {
[task 2021-08-13T00:21:29.838Z] 00:21:29 INFO - ~~~~~~~~~~^
[task 2021-08-13T00:21:29.839Z] 00:21:29 INFO - 1 error generated.
[task 2021-08-13T00:21:29.839Z] 00:21:29 ERROR - make[4]: *** [/builds/worker/checkouts/gecko/config/rules.mk:673: DocAccessibleWrap.o] Error 1
[task 2021-08-13T00:21:29.839Z] 00:21:29 INFO - make[4]: Leaving directory '/builds/worker/workspace/obj-build/accessible/atk'
[task 2021-08-13T00:21:29.839Z] 00:21:29 ERROR - make[3]: *** [/builds/worker/checkouts/gecko/config/recurse.mk:72: accessible/atk/target-objects] Error 2
[task 2021-08-13T00:21:29.839Z] 00:21:29 INFO - make[3]: *** Waiting for unfinished jobs....
Updated•4 years ago
|
Summary: Intermittent [Tier2] /builds/worker/checkouts/gecko/accessible/atk/DocAccessibleWrap.cpp:26:36: error: no member named 'GetFocusedWindow' in 'nsWindow' → Perma [Tier2] /builds/worker/checkouts/gecko/accessible/atk/DocAccessibleWrap.cpp:26:36: error: no member named 'GetFocusedWindow' in 'nsWindow'
Comment 1•4 years ago
|
||
Eitan, could you please have a look over these bustages that started with Bug 1723563? Thank you.
Flags: needinfo?(eitan)
Comment 3•4 years ago
|
||
Set release status flags based on info from the regressing bug 1723563
status-firefox91:
--- → unaffected
status-firefox92:
--- → unaffected
status-firefox93:
--- → affected
status-firefox-esr78:
--- → unaffected
status-firefox-esr91:
--- → unaffected
| Assignee | ||
Comment 4•4 years ago
|
||
Updated•4 years ago
|
Assignee: nobody → eitan
Status: NEW → ASSIGNED
| Assignee | ||
Updated•4 years ago
|
Flags: needinfo?(eitan)
Comment 5•4 years ago
|
||
same build issue on OpenBSD which is X11-only .. shouldnt this has been catched by what was setup in bug 1723869 ? trying D122646
Comment 6•4 years ago
|
||
Comment on attachment 9236260 [details]
Bug 1725519 - Build nsWindow::GetFocusedWindow in non-Wayland configs. r?emilio
fixes the build for me
Attachment #9236260 -
Flags: feedback+
Updated•4 years ago
|
Whiteboard: [retriggered]
| Comment hidden (Intermittent Failures Robot) |
Pushed by archaeopteryx@coole-files.de:
https://hg.mozilla.org/integration/autoland/rev/404fcab3b699
Build nsWindow::GetFocusedWindow in non-Wayland configs. r=emilio
Comment 9•4 years ago
|
||
| bugherder | ||
Status: ASSIGNED → RESOLVED
Closed: 4 years ago
Resolution: --- → FIXED
Target Milestone: --- → 93 Branch
| Comment hidden (Intermittent Failures Robot) |
Updated•4 years ago
|
Has Regression Range: --- → yes
You need to log in
before you can comment on or make changes to this bug.
Description
•