Bug 1725519 -  Build nsWindow::GetFocusedWindow in non-Wayland configs. r=emilio

Differential Revision: https://phabricator.services.mozilla.com/D122646